CHANGELOG
=========

1.4.2 (unreleased)
------------------

* Fixed missing renderer argument for render method for AdminFolderWidget and
  AdminFileWidget classes for Django 2.1 and up (#1120)


1.4.1 (2018-12-06)
------------------

* Fixed widgets to work with Django 2.x (#1111)
* Added admin site context to make_folder view (#1112)
* Added never_cache decorator in server views. (#1100)


1.4.0 (2018-11-15)
------------------

* Added support for Django 2.0 and 2.1
* Enabled django-mptt 0.9
* Converted QueryDict to dict before manipulating in admin
* Hide 'Save as new' button in file admin
* Fixed history link for folder and image object
* Fixed rendering canonical URL in change form


1.3.2 (2018-04-23)
------------------

* Don't show set public / set private actions if permissions are disabled.


1.3.1 (2018-04-15)
------------------

* Allowed easy-thumbnails < 3 in setup.py
* Fixed broken reference for delete icon
* Fixed minor documentation issues
* Fixed travis configuration
* Fixed a regression with loading and dumping fixtures (#965)
* Added callable instead of setting as Filer.is_public default
* Fixed canonical URL computation
* Fixed image preview target size
* Fixed translatable string
* Updated translations
* Changed file size field to BigIntegerField
* Fixed import_files command to work on Django 1.10+
* Used get_queryset in FolderAdmin instead of the manager
* Cleaned up swapped models implementation
* Allowed django-polymorphic>_2.0


1.3.0 (2017-11-02)
------------------

* Introduced Django 1.11 support
* Fixed `get_css_position` filter breaking when there is no image
* Fixed missing html title when adding folders
* Fixed a regression where third party app migrations would require the
  ``FILER_IMAGE_MODEL`` setting.


1.2.7 (2017-03-02)
------------------

* Added 'get_css_position' template filter for background images
* Updated translations


1.2.6 (2017-01-13)
------------------

* Fixed markup issue with editing file in admin