@@ -5,7 +5,9 @@ CHANGELOG
 ------------------
 
 * Fixed missing renderer argument for render method for AdminFolderWidget and
-  AdminFileWidget classes for Django 2.1 and up (#1120)
+  AdminFileWidget classes for Django 2.x (#1120)
+* Fixed a problem in Django 2.x with getting None instead of
+  the object in AdminFileWidget and AdminFolderWidget (#1118)
 
 
 1.4.1 (2018-12-06)
